ingresses/airflow-ingress-dev.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: airflow-ingress
spec:
  rules:
    - http:
        paths:
          - path: /airflow-dev/*
            backend:
              serviceName: airflow-webserver
              servicePort: 8080
